--- a/as-wire-ui/src/app/top-bar/top-bar.component.html
+++ b/as-wire-ui/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,19 @@
-<p>top-bar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand mb-0 h1" href="/">AS Wire</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Add</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="#">Remove</a>
+                    </li>
+            </ul>
+        </div>
+    </div>
+</nav>
