Adding services to ui

--- a/as-wire-ui/src/app/product-list/product-list.component.html
+++ b/as-wire-ui/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div class="list-group list-group-flush">
-    <a *ngFor="let product of products" href="#" class="list-group-item list-group-item-action"
+    <a *ngFor="let product of products" [routerLink]="['/products', product.id]" class="list-group-item list-group-item-action"
         [title]="product.title + ' details'">
         <div class="d-flex w-100 justify-content-between">
             <div class="d-flex flex-row">
