--- a/as-wire-ui/src/app/top-bar/top-bar.component.html
+++ b/as-wire-ui/src/app/top-bar/top-bar.component.html
@@ -8,11 +8,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Add</a>
+                    <a class="nav-link" [routerLink]="['/add']">Add</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="#">Remove</a>
-                    </li>
+                        <a class="nav-link" [routerLink]="['/remove']">Remove</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/edit']">Edit</a>
+                </li>
             </ul>
         </div>
     </div>
