--- a/as-wire-ui/src/app/product-list/product-list.component.html
+++ b/as-wire-ui/src/app/product-list/product-list.component.html
@@ -1,12 +1,28 @@
-<div class="list-group list-group-flush">
-    <a *ngFor="let product of products" [routerLink]="['/products', product.id]" class="list-group-item list-group-item-action"
-        [title]="product.title + ' details'">
-        <div class="d-flex w-100 justify-content-between">
-            <div class="d-flex flex-row">
-                <img [src]="product.imageUri" style="width:30px;height:30px;">
-                <h5 class="ml-3">{{product.name}}</h5>
+<!--<div class="list-group list-group-flush">
+    <div *ngFor="let product of products" class="list-group-item list-group-item-action">
+        <img [src]="product.imageUri" >
+        <a [routerLink]="['/products', product.id]" [title]="product.title + ' details'">
+            <div class="d-flex justify-content-between">
+                <div class="d-flex flex-row">
+
+                    <h5 class="ml-3 align-self-center">{{product.name}}</h5>
+                </div>
+                <small>3 days ago</small>
             </div>
-            <small>3 days ago</small>
+        </a>
+    </div>
+</div>-->
+
+<div *ngFor="let product of products" class="mt-1">
+    <div class="d-flex flex-row bd-highlight p-0 m-0">
+        <div class="col-2 p-0">
+            <img [src]="product.imageUri" style="width:50px;height:50px;">
         </div>
-    </a>
+        <div class="col-10" class="m-2 align-self-center">
+            <a [routerLink]="['/products', product.id]">
+                <h4>{{ product.title }}</h4>
+            </a>
+        </div>
+    </div>
+    <hr class="p-0 m-1">
 </div>
