--- a/as-wire-ui/src/app/top-bar/top-bar.component.html
+++ b/as-wire-ui/src/app/top-bar/top-bar.component.html
@@ -1,20 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand mb-0 h1" href="/">AS Wire</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <div>
+            <a *ngIf="!navbarShow" class="navbar-brand mb-0 h1" href="/"><i class="fa fa-home"></i> Home</a>
+            <a *ngIf="navbarShow" class="navbar-brand mb-0 h1" href="/">AS Wire</a>
+        </div>
+        <button *ngIf="navbarShow" class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" [routerLink]="['/add']">Add</a>
+                <li class="nav-item active" role="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                    <a class="nav-link"  [routerLink]="['/add']">Add</a>
                 </li>
-                <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/remove']">Remove</a>
+                <li class="nav-item" role="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                    <a class="nav-link"  [routerLink]="['/remove']">Remove</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/edit']">Edit</a>
+                <li class="nav-item" role="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                    <a class="nav-link"  [routerLink]="['/edit']">Edit</a>
                 </li>
             </ul>
         </div>
