--- a/as-wire-ui/src/app/top-bar/top-bar.component.html
+++ b/as-wire-ui/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div>
             <a *ngIf="!navbarShow" class="navbar-brand mb-0 h1" href="/"><i class="fa fa-home"></i> Home</a>
-            <a *ngIf="navbarShow" class="navbar-brand mb-0 h1" href="/">AS Wire</a>
+            <a *ngIf="navbarShow" class="navbar-brand mb-0 h1" href="/">AS Wire Netting</a>
         </div>
         <button *ngIf="navbarShow" class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
