--- a/as-wire-ui/src/app/add-product/add-product.component.html
+++ b/as-wire-ui/src/app/add-product/add-product.component.html
@@ -1,4 +1,6 @@
-<h4>Add Product</h4>
+<div class="d-flex justify-content-center align-items-center">
+    <h4>Add Product</h4>
+</div>
 <form [formGroup]="newProduct" (ngSubmit)="onSubmit(newProduct.value)">
     <div class="progress" *ngIf="progressBarVisible">
         <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
