--- a/as-wire-ui/src/app/remove-product/remove-product.component.html
+++ b/as-wire-ui/src/app/remove-product/remove-product.component.html
@@ -1,16 +1,26 @@
 <h5 class="d-flex justify-content-center align-items-center text-monospace">Remove Products</h5>
 <hr class="p-0 m-1">
-<div *ngFor="let product of products" class="mt-1">
-    <div class="d-flex flex-row bd-highlight p-0 m-0">
-        <div class="col-2 p-0">
-            <img [src]="product.imageUri" style="width:50px;height:50px;">
-        </div>
-        <div class="col-8 p-0 align-self-center">
-            <h5 class="text-monospace font-weight-light">{{ product.title }}</h5>
-        </div>
-        <div class="custom-control custom-checkbox col-2 align-self-center justify-content-center">
-            <input type="checkbox" [id]="product.id" style="width: 30px;height: 30px;">
+<form [formGroup]="form" (ngSubmit)="submit()">
+    <div>
+        <div formArrayName="removeProducts" *ngFor="let product of form.controls.removeProducts.controls; let i = index"
+            class="mt-1">
+            <div class="d-flex flex-row bd-highlight p-0 m-0">
+                <div class="col-2 p-0">
+                    <img [src]="products[i].imageUri" style="width:50px;height:50px;">
+                </div>
+                <div class="col-8 p-0 align-self-center">
+                    <h5 class="text-monospace font-weight-light">{{ products[i].title }}</h5>
+                </div>
+                <div class="custom-control custom-checkbox col-2 align-self-center justify-content-center">
+                    <input type="checkbox" [formControlName]="i" style="width: 30px;height: 30px;">
+                </div>
+            </div>
+            <hr class="p-0 m-1">
         </div>
     </div>
-    <hr class="p-0 m-1">
-</div>
+    <div class="d-flex flex-row">
+        <div class="p-2 flex-fill">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+        </div>
+    </div>
+</form>
