--- a/as-wire-ui/src/app/edit-product/edit-product.component.html
+++ b/as-wire-ui/src/app/edit-product/edit-product.component.html
@@ -1,1 +1,38 @@
-<p>edit-product works!</p>
+<div class="d-flex justify-content-center align-items-center">
+    <h4>Edit Product</h4>
+</div>
+<form [formGroup]="updatedProduct" (ngSubmit)="onSubmit(updatedProduct.value)">
+    <div class="progress" *ngIf="progressBarVisible">
+        <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
+            [attr.aria-valuenow]="uploadPercent" aria-valuemin="0" aria-valuemax="100"
+            [style.width]="uploadPercent+'%'"></div>
+    </div>
+    <div class="card">
+        <label for="image">
+            <input type="file" accept="image/*" name="image" id="image" style="display:none;"
+                (change)="uploadFile($event)" />
+            <img [src]="downloadURL" class="card-img-top img-fluid" alt="..." />
+        </label>
+    </div>
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input id="name" class="form-control" placeholder="Enter Name" type="text" formControlName="name" required>
+        <small id="emailHelp" class="form-text text-muted">This is the name of the product.</small>
+    </div>
+    <div class="form-group">
+        <label for="description">Description</label>
+        <textarea class="form-control" id="description" formControlName="description" rows="5"></textarea>
+        <small class="form-text text-muted">Add description of the product.</small>
+    </div>
+    <div class="d-flex flex-row">
+        <div class="p-2 flex-fill">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+        </div>
+    </div>
+</form>
+<hr>
+<div class="bg-light p-4 d-flex flex-column justify-content-center align-items-center">
+    <p class="m-0 text-monospace">{{ contactDetails.name }}</p>
+    <p class="m-0 text-monospace">{{ contactDetails.address }}</p>
+    <p class="m-0 text-monospace">{{ contactDetails.phone }}</p>
+</div>
