--- a/as-wire-ui/src/app/product-list/product-list.component.html
+++ b/as-wire-ui/src/app/product-list/product-list.component.html
@@ -45,7 +45,7 @@
     <a class="text-reset" [routerLink]="['/products', product.id]">
         <div class="d-flex flex-row bd-highlight p-0 m-0">
             <div class="col-2 p-0">
-                <img [src]="product.imageUri" style="width:50px;height:50px;">
+                <img [src]="product.imageUri" style="width:50px;height:50px;border-radius: 50%;">
             </div>
             <div class="col-10 p-0 align-self-center">
                 <h5 class="text-monospace font-weight-light">{{ product.title }}</h5>
