--- a/as-wire-ui/src/app/app.component.html
+++ b/as-wire-ui/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-top-bar></app-top-bar>
-
+<div style="margin-bottom: 40px;">... </div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
