--- a/as-wire-ui/src/app/top-bar/top-bar.component.html
+++ b/as-wire-ui/src/app/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
         <div>
             <a *ngIf="!navbarShow" class="navbar-brand mb-0 h1" href="/"><i class="fa fa-home"></i> Home</a>
