--- a/as-wire-web/src/app/app.component.html
+++ b/as-wire-web/src/app/app.component.html
@@ -1,1 +1,4 @@
-<p>Welcome to AS Wire Netting Website!</p>
+<app-top-bar></app-top-bar>
+<div class="container" style="margin-top: 60px;">
+  <router-outlet></router-outlet>
+</div>
